Profile Account & Friends View Correct on Small Devices

--- a/src/app/mood-container/main-page/content/profile/profile.component.css
+++ b/src/app/mood-container/main-page/content/profile/profile.component.css
@@ -1,4 +1,20 @@
-.img-cover{
+.circle {
+  position: relative;
+  width: 210px;
+  padding-top: 210px;
+
+  border-radius: 50%;
+  overflow: hidden;
+}
+
+.profileImage {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+
+  width: 210px;
+  height: 210px;
   object-fit: cover;
-  object-position: center;
 }
